# python-project-52

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/: mixins.py  settings.py  urls.py  utils.py  views.py
task_manager/fixtures/: labels.json  task_statuses.json  tasks.json  tasks_to_labels.json  test_data.json  users.json
task_manager/labels/: forms.py  mixins.py  models.py  tests.py  urls.py  views.py
task_manager/labels/migrations/: 0001_labels_init.py
task_manager/statuses/: forms.py  mixins.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_statuses_init.py
task_manager/tasks/: apps.py  filters.py  forms.py  mixins.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_tasks_init.py
task_manager/templates/: index.html  login.html
task_manager/templates/labels/: create.html  delete.html  index.html  update.html
task_manager/templates/layouts/: application.html  form.html
task_manager/templates/statuses/: create.html  delete.html  index.html  update.html
task_manager/templates/tasks/: create.html  delete.html  detail.html  filter.html  index.html  update.html
task_manager/templates/users/: create.html  delete.html  index.html  update.html
task_manager/users/: forms.py  mixins.py  models.py  tests.py  urls.py  views.py
task_manager/users/migrations/: 0001_init_user.py
